mais ou menos igual ao print

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="efeito-vidro"> 
     <div class="container">
         <form>
             <div class="title">
-                <span>Titulo do formulario</span>
+                <span>Formulario Teste Arthur </span>
             </div>
             <div>
                 <input type="text" class="name" placeholder="Digite seu nome:">
@@ -25,7 +26,7 @@
                 <input type="checkbox" class="term-accept">
                 <label for="term-accept">Li e concordo com os termos de uso da plataforma</label>
             </div>
-            <button type="submit">Cadastro</button>
+            <button type="submit">CADASTRO</button>
         </form>
     </div>
 </body>
